restructured source hierachy
implemented test cases for all rest endpoints
